[package]
name = "xlsx2erg"
version = "0.1.0"
authors = ["Tobias Kopf"]
description = "A simple tool to convert xlsx workouts to erg files for bike computers"
license = "MIT"
keywords = ["erg", "cycling", "training plan"]
categories = ["command-line-utilities"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
office = "0.8.1"
